[package]
name = "ebur128rs"
version = "0.1.0"
authors = ["Richard Mitic <richard.h.mitic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9"
biquad = "0.3.1"

[dev-dependencies]
rand = "0.7.3"
more-asserts = "0.2.1"
dasp_signal = "0.11.0"
audrey = "0.2.0"