[package]
name = "ebur128rs"
version = "0.2.0"
authors = ["richardmitic"]
edition = "2018"
description = "Implementation of EBU R-128 loudness measurement"
license = "MIT"
repository = "https://github.com/richardmitic/ebur128rs"
readme = "README.md"
keywords = ["audio", "loudness", "ebur128"]
categories = ["multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biquad = "0.3.1"
enum-display-derive = "0.1.0"

[dev-dependencies]
rand = "0.7.3"
more-asserts = "0.2.1"
dasp_signal = "0.11.0"
audrey = "0.2.0"
itertools = "0.9"